--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -9,7 +9,7 @@
             <!-- <img src="{% static 'images/home.png' %}" alt="Food Image" class="home__img"> -->
             <img class="img-fluid carousel" name="carousel">
             <div class="home__data">
-                <h2 class="home__title">Analyse.Cook.Eat<br>A healthier you, starts with Healthy Eats.</h2>
+                <h2 class="home__title">Analyse.Cook.Eat<br>A healthier you, starts with EatGood.</h2>
                 <p class="home__subtitle">
                     Healthy Eats is a great resource for anyone interested in learning more about nutrition and healthy eating. The website provides detailed information about the nutritional value of various ingredients, and also offers a recipe generator to help users create healthy and nutritious meals. In addition, the website also provides a food analysis tool, which can be used to identify unhealthy ingredients in recipes and make healthier choices.</p>
                 <a href="{% url 'register' %}" class="button">Join Us</a>
