--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,7 +16,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'images/favicon-16x16.png' %}">
     <link rel="manifest" href="{% static 'images/site.webmanifest' %}">
 
-    <title>Healthy Eats</title>
+    <title>Eat Good</title>
 </head>
 
 <body>
